2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libgnome-menu/:

	Fix gmenu_tree_directory_get_contents binding, fixes bug 522745

	* vapi/libgnome-menu.vapi: regenerated

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix foreach when used with methods returning arrays

2008-06-01  Jaap A. Haitsma  <jaap@haitsma.org>

	* vala/valasemanticanalyzer.vala:
	Small change to make code a bit clearer. Fixes bug #535942

2008-06-01  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/gstreamer-0.10.vapi:
	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:
	Gst.structure.get_value should return Gst.value. Fixes bug #535965

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/:

	Fix gdk_window_get_geometry binding,
	patch by Thijs Vermeir, fixes bug 536062

	* vapi/gdk-2.0.vapi: regenerated

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala:
	* vala/valasemanticanalyzer.vala:

	Improve error message for incompatible signal handlers,
	fixes bug 535953

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix GtkTreeView bindings, patch by Daniel Svensson

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Report error when trying to use unowned element variable in
	foreach statement using iterators

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeinvocationexpressionbinding.vala:

	Fix memory management when using owned variables as argument
	for unowned reference and output parameters

	* tests/classes-methods.vala:

	Test owned and unowned variables as argument for reference and
	output parameters

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Report error when trying to use unowned variables as argument
	for owned reference and output parameters

2008-06-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Report internal error for missing type argument